CloudNativeApps/k8s/credit-cards-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-cards-app
  labels:
    app: credit-cards-app
    tier: backend
    team: grupo12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-cards-app
  template:
    metadata:
      labels:
        app: credit-cards-app
        tier: backend
    spec:
      containers:
        - name: credit-cards-app
          image: 146691323147.dkr.ecr.us-east-1.amazonaws.com/credit-cards-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
