CloudNativeApps/k8s/offers-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers-app
  labels:
    app: offers-app
    tier: backend
    team: grupo12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offers-app
  template:
    metadata:
      labels:
        app: offers-app
        tier: backend
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: offers-app
          image: 146691323147.dkr.ecr.us-east-1.amazonaws.com/offers-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
