CloudNativeApps/k8s/posts-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-db
  namespace: default
  labels:
    app: posts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-db
  template:
    metadata:
      labels:
        app: posts-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgres-storage
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      volumes:
        - name: postgres-storage
          emptyDir: {}
