CloudNativeApps/k8s/rf003-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf003-app
  labels:
    app: rf003-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf003-app
  template:
    metadata:
      labels:
        app: rf003-app
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: rf003-app
          image: 146691323147.dkr.ecr.us-east-1.amazonaws.com/rf003-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /rf003/ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
