CloudNativeApps/k8s/rf004-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf004-app
  labels:
    app: rf004-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf004-app
  template:
    metadata:
      labels:
        app: rf004-app
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: rf004-app
          image: 146691323147.dkr.ecr.us-east-1.amazonaws.com/rf004-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
