CloudNativeApps/k8s/rf005-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf005-deployment
  labels:
    app: rf005-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rf005-app
  template:
    metadata:
      labels:
        app: rf005-app
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: rf005-container
          image: 146691323147.dkr.ecr.us-east-1.amazonaws.com/rf005-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
