CloudNativeApps/k8s/scores-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: score-app
  labels:
    app: score-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score-app
  template:
    metadata:
      labels:
        app: score-app
    spec:
      containers:
        - name: scores-app
          image: 146691323147.dkr.ecr.us-east-1.amazonaws.com/scores-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
