CloudNativeApps/k8s/credit-cards-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-cards-db-service
spec:
  selector:
    app: credit-cards-db
  ports:
  - port: 5432
    targetPort: 5432
