CloudNativeApps/k8s/posts-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-app-service
  namespace: default
spec:
  selector:
    app: posts-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
