CloudNativeApps/k8s/rf003-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rf003-app-service
spec:
  selector:
    app: rf003-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30006
  type: NodePort
