CloudNativeApps/k8s/scores-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: score-app-service
spec:
  selector:
    app: score-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
