CloudNativeApps/k8s/users-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-app-service
  labels:
    app: users-app
spec:
  type: NodePort
  selector:
    app: users-app
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
