CloudNativeApps/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-app-service
                port:
                  number: 80
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-app-service
                port:
                  number: 80
          - path: /offers
            pathType: Prefix
            backend:
              service:
                name: offers-app-service
                port:
                  number: 80
          - path: /routes
            pathType: Prefix
            backend:
              service:
                name: routes-app-service
                port:
                  number: 80
          - path: /rf004
            pathType: Prefix
            backend:
              service:
                name: rf004-app-service
                port:
                  number: 80
          - path: /rf003
            pathType: Prefix
            backend:
              service:
                name: rf003-app-service
                port:
                  number: 80
          - path: /scores
            pathType: Prefix
            backend:
              service:
                name: score-app-service
                port:
                  number: 80
          - path: /rf005
            pathType: Prefix
            backend:
              service:
                name: rf005-app-service
                port:
                  number: 8000
          - path: /credit-cards
            pathType: Prefix
            backend:
              service:
                name: credit-cards-app-service
                port:
                  number: 80
          - path: /native
            pathType: Prefix
            backend:
              service:
                name: truenative-service
                port:
                  number: 80
